--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@
 .hero {
     background-image: url(./image/bg-oragnic.jpg);
     background-size: cover;
-    height: 120vh;
 }
 
 .contant {
@@ -20,7 +19,10 @@
 .contant h2 {
     font-size: 80px;
 }
-
+.aaaa:hover{
+    background-color:#157347;
+    color:white;
+}
 .bkg {
     color: #FF6924;
 }
@@ -38,6 +40,18 @@
     background-color: #50882A;
 }
 
+.iiii{
+    background-color: #6e9422;
+}
+
+.dell {
+    background-color: #50882A;
+}
+
+.color {
+    color: #50882A;
+}
+
 .icon:hover {
     background-color: #fff;
 }
@@ -50,9 +64,11 @@
 .clr {
     color: #010148;
 }
-.bor{
+
+.bor {
     border: 2px solid #010148;
 }
+
 .alt:hover {
     background-color: #FF6924;
     border: 1px solid #FF6924;
@@ -84,30 +100,63 @@
     height: 650px;
     width: 100%;
 }
-.top{
+
+.top {
     margin-top: 150px
 }
-.csr:hover{
+
+.csr:hover {
     cursor: text;
 }
-.bdn{
+
+.bdn {
     padding: 60px 0;
     margin-top: 80px;
 }
-.footer{
+
+.footer {
     background-image: url(./image/footer\ img.jpg);
-    background-size: cover;
-    height: 450px;
+
 }
+
 .ddd {
-   border: 2px solid #FF6924;
-   width: 35px;
+    border: 2px solid #FF6924;
+    width: 35px;
 }
-.mtb{
+
+.mtb {
     margin-top: 70px;
 }
-@media (max-width: 768px){
-    .dolar{
+
+.bor {
+    border: 1px solid rgb(181, 177, 177);
+    height: 50px;
+}
+
+.login-img {
+    background-image: url(./image/login\ hero\ section.jpg);
+    background-size: cover;
+    height: 350px;
+}
+
+.login-footer {
+    background-image: url(./image/loginfooter.png);
+    background-size: cover;
+}
+
+.login {
+    background-image: url(./image/footer.jpg);
+    background-size: cover;
+    height: 150px;
+}
+
+
+@media (max-width: 768px) {
+    .dolar {
         width: 500px;
     }
+
+    /* .login-footer {
+        height: 1100px;
+    } */
 }
